--- a/gt-backend/Cargo.toml
+++ b/gt-backend/Cargo.toml
@@ -17,6 +17,7 @@ migration = { path = "../migration" }
 sea-orm = { version = "0.10.6", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
 serde = "1.0.152"
 serde_json = "1.0.91"
+thiserror = "1.0.38"
 tokio = { version = "1.24.1", features = [ "full" ] }
 tower = "0.4.13"
 tower-cookies = "0.8.0"
