--- a/gt-backend/Cargo.toml
+++ b/gt-backend/Cargo.toml
@@ -7,13 +7,15 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.68"
-axum = "0.6.2"
+axum = { version = "0.6.2", features = [ "headers" ] }
+chrono = "0.4.23"
 dotenvy = "0.15.6"
 futures = "0.3.25"
 gt-core = { path = "../gt-core" }
 http = "0.2.8"
 hyper = { version = "0.14.23", features = ["full"] }
 migration = { path = "../migration" }
+pbkdf2 = "0.11.0"
 sea-orm = { version = "0.10.6", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
 serde = "1.0.152"
 serde_json = "1.0.91"
