--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 HOST="127.0.0.1"
 PORT="8000"
 # DATABASE_URL="sqlite://./db.sqlite3"
-DATABASE_URL="postgres://postgres:pw@127.0.0.1:5432/postgres"
 FRONTEND_DIR="/home/adrian/programming/rust/gymtracker/todomvc/dist"
+DATABASE_URL="postgres://postgres:pw@127.0.0.1:5432/postgres"
+POSTGRES_PASSWORD="pw"
+SECRET="totallysecret"
