--- a/gt-backend/Cargo.toml
+++ b/gt-backend/Cargo.toml
@@ -9,17 +9,21 @@ edition = "2021"
 anyhow = "1.0.68"
 axum = { version = "0.6.2", features = [ "headers" ] }
 chrono = "0.4.23"
+derive_more = "0.99.17"
 dotenvy = "0.15.6"
 email_address = "0.2.4"
 futures = "0.3.25"
 gt-core = { path = "../gt-core" }
+hmac = "0.12.1"
 http = "0.2.8"
 hyper = { version = "0.14.23", features = ["full"] }
+jwt = "0.16.0"
 migration = { path = "../migration" }
 pbkdf2 = "0.11.0"
 sea-orm = { version = "0.10.6", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
 serde = "1.0.152"
 serde_json = "1.0.91"
+sha2 = "0.10.6"
 thiserror = "1.0.38"
 tokio = { version = "1.24.1", features = [ "full" ] }
 tower = "0.4.13"
