--- a/gt-frontend/Cargo.toml
+++ b/gt-frontend/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dioxus = { version = "0.3.1" }
+dioxus-web = "0.3.0"
 gt-core = { path = "../gt-core" }
+serde = "1.0.152"
+serde_json = "1.0.91"
+wasm-bindgen = "0.2.83"
