--- a/gt-backend/Cargo.toml
+++ b/gt-backend/Cargo.toml
@@ -28,4 +28,5 @@ thiserror = "1.0.38"
 tokio = { version = "1.24.1", features = [ "full" ] }
 tower = "0.4.13"
 tower-cookies = "0.8.0"
-tower-http = { version = "0.3.5", features = [ "fs", "auth" ] }
+tower-http = { version = "0.3.5", features = [ "fs", "auth", "trace" ] }
+tracing-subscriber = "0.3.16"
