--- a/gt-backend/Cargo.toml
+++ b/gt-backend/Cargo.toml
@@ -18,6 +18,7 @@ hmac = "0.12.1"
 http = "0.2.8"
 hyper = { version = "0.14.23", features = ["full"] }
 jwt = "0.16.0"
+log = "0.4.17"
 migration = { path = "../migration" }
 pbkdf2 = "0.11.0"
 sea-orm = { version = "0.10.6", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
