--- a/gt-core/Cargo.toml
+++ b/gt-core/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.23"
 derive_more = "0.99.17"
+num_enum = "0.5.9"
 serde = "1.0.152"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
