--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,18 @@
 version: '3.4'
 
 services:
-  # web:
-  #   image: gymtracker
-  #   build: .
-  #   env_file:
-  #     - .env.
-  db:
+  web:
+    image: gymtracker
+    build: .
+    env_file:
+      - .env.docker
+    ports:
+      - "8000:8000"
+    command: "yes"
+  postgres:
     image: postgres:15
     env_file:
-      - .env
-    ports:
-      - "5432:5432"
+      - .env.docker
     volumes:
       - "pgdata:/var/lib/postgresql/data"
 volumes:
