--- a/gt-frontend/Cargo.toml
+++ b/gt-frontend/Cargo.toml
@@ -16,6 +16,7 @@ futures-util = "0.3.26"
 gloo-timers = "0.2.6"
 gt-core = { path = "../gt-core" }
 js-sys = "0.3.60"
+lazy_static = "1.4.0"
 log = "0.4.17"
 reqwest = { version = "0.11.14", features = [ "json" ] }
 serde = "1.0.152"
