add superuser role & example api endpoint

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ FRONTEND_DIR="/home/adrian/programming/rust/gymtracker/gt-frontend/dist"
 DATABASE_URL="postgres://postgres:pw@127.0.0.1:5432/postgres"
 POSTGRES_PASSWORD="pw"
 SECRET="totallysecret"
+SUPERUSER_NAME="admin"
+SUPERUSER_PASSWORD="admin"
+SUPERUSER_EMAIL="adrian@dappri.ch"
