--- a/.env.docker
+++ b/.env.docker
@@ -5,3 +5,6 @@ FRONTEND_DIR="/app/gymtracker/dist"
 DATABASE_URL="postgres://postgres:pw@postgres:5432/postgres"
 POSTGRES_PASSWORD="pw"
 SECRET="totallysecret"
+SUPERUSER_NAME="admin"
+SUPERUSER_PASSWORD="admin"
+SUPERUSER_EMAIL="adrian@dappri.ch"
