check superuser in frontend
checking unverified jwt is not secure as anyone can just create one but
api requests still check the validity of the token. In client-side
rendering it seems hard to deny access to a page (I think someone could
also just take the wasm and run it to get the admin page)

--- a/gt-core/Cargo.toml
+++ b/gt-core/Cargo.toml
@@ -11,6 +11,9 @@ chrono = "0.4.23"
 derive_more = "0.99.17"
 num_enum = "0.5.9"
 serde = "1.0.152"
+hmac = "0.12.1"
+jwt = "0.16.0"
+sha2 = "0.10.6"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 sea-orm = { version = "0.10.6", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
