--- a/gt-frontend/Cargo.toml
+++ b/gt-frontend/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.23"
 const_format = "0.2.30"
+derive_more = "0.99.17"
 dioxus = { version = "0.3.1" }
 dioxus-router = { version = "0.3.0", features = [ "web" ] }
 dioxus-web = "0.3.0"
