--- a/gt-core/Cargo.toml
+++ b/gt-core/Cargo.toml
@@ -14,6 +14,7 @@ serde = "1.0.152"
 hmac = "0.12.1"
 jwt = "0.16.0"
 sha2 = "0.10.6"
+log = "0.4.17"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 sea-orm = { version = "0.10.6", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
