--- a/gt-backend/Cargo.toml
+++ b/gt-backend/Cargo.toml
@@ -26,6 +26,7 @@ serde = "1.0.152"
 serde_json = "1.0.91"
 thiserror = "1.0.38"
 tokio = { version = "1.24.1", features = [ "full" ] }
+tokio-util = "0.7.7"
 tower = "0.4.13"
 tower-cookies = "0.8.0"
 tower-http = { version = "0.3.5", features = [ "fs", "auth", "trace" ] }
