--- a/gt-frontend/Cargo.toml
+++ b/gt-frontend/Cargo.toml
@@ -14,6 +14,7 @@ dioxus-router = { version = "0.3.0", features = [ "web" ] }
 dioxus-web = "0.3.0"
 fermi = "0.3.0"
 futures-util = "0.3.26"
+gloo-file = "0.2.3"
 gloo-timers = "0.2.6"
 gt-core = { path = "../gt-core" }
 itertools = "0.10.5"
