--- a/gt-frontend/Cargo.toml
+++ b/gt-frontend/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base64 = "0.21.0"
 chrono = "0.4.23"
 const_format = "0.2.30"
 derive_more = "0.99.17"
