--- a/gt-backend/Cargo.toml
+++ b/gt-backend/Cargo.toml
@@ -21,7 +21,7 @@ log = "0.4.17"
 migration = { path = "../migration" }
 ordered-float = "3.4.0"
 pbkdf2 = "0.11.0"
-sea-orm = { version = "0.10.6", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
+sea-orm = { version = "0.10.6", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
 serde = "1.0.152"
 serde_json = "1.0.91"
 thiserror = "1.0.38"
