--- a/gt-core/Cargo.toml
+++ b/gt-core/Cargo.toml
@@ -17,4 +17,4 @@ sha2 = "0.10.6"
 log = "0.4.17"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-sea-orm = { version = "0.10.6", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
+sea-orm = { version = "0.10.6", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
